--- a/index.html
+++ b/index.html
@@ -15,55 +15,84 @@
             <p>
                 <input 
                   type="text"
-                  placeholder="buscar...">
+                  placeholder="buscar..."
+                  v-mode ="search">
             </p>
+
+                    <ul>
+                        <li v-for="n in 10">
+                            <a href="#">Asado</a>
+                        </li>
+                    </ul>
+
+            <button @click="show_add_receta = !show_add_receta">
+                Agregar Nueva Receta
+            </button>
+
+            <div v-show="show_add_receta">
+            <p>
+                <input 
+                  type="text"
+                  placeholder="id..."
+                  v-model="new_receta.id">
+            </p>
+            <p>
+                <input 
+                  type="text"
+                  placeholder="Nombre de la receta..."
+                  v-model="new_receta.nombre">
+            </p>
+            <p>
+                <textarea 
+                cols="30"
+                rows="10"
+                placeholder="Descripcion..."
+                v-model="new_receta.descripcion">
+                </textarea>
+            </p>
+
+            <p>
+                <input 
+                  type="text"
+                  placeholder="Chef..."
+                  v-model="new_receta.chef">
+            </p>
+
+            <p>
+                <input 
+                  type="text"
+                  placeholder="Agregar Ingrediente..."
+                  v-model="nuevo_ingrediente"
+                  @keyup.enter="AgregarIngrediente()">
+            </p>
+
             <ul>
-                <li v-for="n in 10">
-                    <a href="#">Asado</a>
+                <li v-for="n in new_receta.ingredientes">
+                    Agregar Ingrediente
                 </li>
             </ul>
-            <button>Agregar Nueva Receta</button>
-            <p>
-                <input 
-                  type="text"
-                  placeholder="id...">
-            </p>
-            <p>
-                <input 
-                  type="text"
-                  placeholder="Nombre de la receta...">
-            </p>
-            <p>
-                <input 
-                  type="text"
-                  placeholder="Descripcion...">
-            </p>
-            <p>
-                <input 
-                  type="text"
-                  placeholder="Chef...">
-            </p>
-            <p>
-                <input 
-                  type="text"
-                  placeholder="Agregar Ingredientes...">
-            </p>
-            <ul>
-                <li v-for="n in 5">Agregar Ingrediente</li>
-            </ul>
 
+            </div>
         </div>
 
 
         <div style="width: 50%; float: right;">
             <h3>Titulo de la receta</h3>
-
-
+            <h4>Chef de la Receta</h4>
+            <h4>Ingredientes:</h4>
+            <ul>
+                <li v-for="n in 5">Ingrediente</li>
+            </ul>
+            <p style="background-color: cadetblue;">
+                Descripcion de la Receta 
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos dolores voluptatum sapiente ullam quia, 
+            neque ducimus dolor numquam distinctio sint, quis velit inventore! Sit quasi accusantium dignissimos, odio facilis neque.
+            </p>
         </div>
 
     </div>
     
-    <script src="vue.js"></script>
+    <script src="https://unpkg.com/vue@3.3.4/dist/vue.global.js"></script>
     <script src="recetas.js"></script>
 </body>
 </html>
